tests/compile_fail/display/non_display_implicit_enum_unit_variant.stderr
error: Implicit formatting of unit enum variant is supported only for `Display` macro. Use `#[upper_hex("...")]` to explicitly specify the formatting.
 --> tests/compile_fail/display/non_display_implicit_enum_unit_variant.rs:3:5
  |
3 |     UnitVariant,
  |     ^^^^^^^^^^^
